<resources>
    <string name="app_name">crud_db_local_room</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account_here">Create Account, HERE!!</string>
    <string name="sign_up">Sign Up</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="car">Cart</string>
    <string name="add">ADD</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="cart">Cart</string>
</resources>