<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/textViewIdProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/id" />
    <TextView
        android:id="@+id/textViewNameProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewIdProduct"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/textViewPriceProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNameProduct"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/textViewCategoryOfProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPriceProduct"
        tools:text="@string/category" />

    <ImageView
        android:id="@+id/imageViewDeleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_margin="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_delete"/>

    <ImageView
        android:id="@+id/imageViewUpdateProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_marginEnd="@dimen/margin_20"
        app:layout_constraintTop_toTopOf="@id/imageViewDeleteProduct"
        app:layout_constraintEnd_toStartOf="@id/imageViewDeleteProduct"
        android:src="@drawable/ic_edit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>